test/pass/exceptions/ex.lly
class MyError(msg: string) < Exception(msg) { }
