test/fail/exceptions/ex.lly
class error(msg: string) < Exception(msg) {  }
